Decrease letter spacing of navbar and fix css selector

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,11 +108,10 @@ body {
   }
 }
 
-nav a {
+header nav a {
   text-transform: uppercase;
-  font-family: Roboto;
   font-size: 0.85rem;
-  letter-spacing: 2px;
+  letter-spacing: 1.25px;
 }
 
 .full-height {
